# FractalsCppSFML

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  fractal.cpp  fractalsInCpp  main.cpp  menger.cpp  menger.hpp
src/: main.cpp
src/fractals/: fractal.cpp  fractal.hpp  sierpinski.cpp  sierpinski.hpp  sierpinskiTriangle.cpp  sierpinskiTriangle.hpp
